output Item에 draggable 속성 부여

--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
             <div class="col-sm-2 col-md-2 sidebar">
                <div class="output-sidebar"><h2 class="title"><label>OUTPUT</label></h2></div>
                <ul class="nav nav-sidebar" id="slider">
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-185-volume-up.png"> Speaker</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-138-cogwheels.png"> Movement</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-65-lightbulb.png"> Light</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-337-iphone-shake.png"> Vibration</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-445-floppy-saved.png"> Save Data</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-21-home.png"> H A</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-515-bath-shower.png"> Waterpump</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-87-display.png"> Display</h4></li>
-                  <li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-293-tea-kettle.png"> Heater</h4></li>
+                   <!-- output List id 는 알파벳 대문자 O 와 숫자를 합친것 -->
+                  <li class="output item" id="O0"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-185-volume-up.png"> Speaker</h4></li>
+                  <li class="output item" id="O1"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-138-cogwheels.png"> Movement</h4></li>
+                  <li class="output item" id="O2"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-65-lightbulb.png"> Light</h4></li>
+                  <li class="output item" id="O3"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-337-iphone-shake.png"> Vibration</h4></li>
+                  <li class="output item" id="O4"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-445-floppy-saved.png"> Save Data</h4></li>
+                  <li class="output item" id="O5"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-21-home.png"> H A</h4></li>
+                  <li class="output item" id="O6"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-515-bath-shower.png"> Waterpump</h4></li>
+                  <li class="output item" id="O7"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-87-display.png"> Display</h4></li>
+                  <li class="output item" id="O8"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-293-tea-kettle.png"> Heater</h4></li>
                </ul>
                <a href="./clock.html">
                <div class="process">
