--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 '88       88'          88 8888       88 88            88 88888888888 8888       88 88888888888   ,ad8888ba,   88888888ba,
   88     88            88 88 88      88  88          88  88          88 88      88 """"888""""  d8"'    `"8b  88      `"8b
@@ -15,8 +15,8 @@
       <link rel="stylesheet" type="text/css" href="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400, 300, 500, 100">
       <link rel="stylesheet" type="text/css" href="./assets/style.css">
-      <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-       <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+      <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+       <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
       <script type="text/javascript" src="./assets/main.js"></script>
         <script type="text/javascript" src="./assets/sub.js"></script>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
